--- a/IBang/appsettings.json
+++ b/IBang/appsettings.json
@@ -4,5 +4,8 @@
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "UserContext": "Server=(localdb)\\mssqllocaldb;Database=IBangContext-d4e69914-ce2f-4f1a-bc10-b8ccb83b5de4;Trusted_Connection=True;MultipleActiveResultSets=true"
+  }
 }
